Correction tablet buttons

--- a/kasa/src/styles/Location.scss
+++ b/kasa/src/styles/Location.scss
@@ -30,12 +30,12 @@
     display: flex;
     @media (max-width: 767px) {
       position: absolute;
-      top: 165%;
+      top: 175%;
       left: 70%;
     }
     @media (max-width: 480px) {
       position: absolute;
-      top: 169%;
+      top: 175%;
       left: 55%;
     }
     @media (max-width: 400px) {
@@ -97,7 +97,7 @@ main {
           max-width: 100%;
         }
         @media (max-width: 1023px) and (min-width: 767px) {
-          width: 90%;
+          max-width: 100%;
         }
       }
       .descriptionText {
