--- a/kasa/src/styles/components/Collapse.scss
+++ b/kasa/src/styles/components/Collapse.scss
@@ -11,7 +11,6 @@
     align-items: flex-start;
   }
   @media screen and (min-width: 768px) and (max-width: 1023px) {
-    width: 100%;
     flex-direction: column;
     align-items: flex-start;
   }
